src/Robot.css
.column {
	display: flex;
	flex-flow: column;
	margin: 0px 3px;
}

.row {
	display: flex;
	justify-content: center;
}

.sliders {
	margin: 10px 0px;
}

.konvajs-content {
	border: 1px solid black;
}

